--- a/cookie.html
+++ b/cookie.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mutlu Gelin</title>
-    <link rel="icon" href="image/image.png" />
+    <title>Kırmızı Böcek</title>
+    <link rel="icon" href="" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -86,37 +86,36 @@
         <div class="policy-terms-container">
           <h2 class="policy-terms-text">Çerez Nedir?</h2>
           <p class="policy-terms-text-one">
-            Çoğu profesyonel web sitesi gibi, cooladventurequest.com da çerezler
-            kullanmaktadır. Çerezler, web sitemizin kullanıcı deneyiminizi
-            iyileştirmesine yardımcı olmak amacıyla cihazınıza yerleştirilen
-            küçük dosyalardır. Bu sayfa, hangi bilgilerin toplandığını,
-            çerezlerin nasıl kullanıldığını ve neden bazen saklanması
-            gerektiğini açıklamaktadır. Ayrıca, çerezleri devre dışı bırakmanın
-            olası etkilerini de açıklayacağız.
+            Çoğu profesyonel web sitesi gibi, startpathjoy.com da çerezler
+            kullanmaktadır. Çerezler, internet tarayıcınızda saklanan küçük
+            dosyalardır ve web sitemizin kullanıcı deneyiminizi iyileştirmesine
+            yardımcı olur. Bu sayfa, hangi bilgilerin toplandığını, çerezlerin
+            nasıl kullanıldığını ve neden bazı çerezlerin saklanması gerektiğini
+            açıklamaktadır. Ayrıca, çerezleri devre dışı bırakmanın olası
+            etkilerini de belirtilecektir.
           </p>
 
           <h2 class="policy-terms-text">Çerezleri Nasıl Kullanıyoruz?</h2>
 
           <p class="policy-terms-text-one">
             Çerezler, aşağıdaki amaçlarla kullanılmaktadır. Çoğu durumda,
-            çerezleri devre dışı bırakmanın web sitemizin işlevselliğini
-            etkileyebileceğini unutmamanız önemlidir. Eğer çerezlerin
-            gerekliliği hakkında emin değilseniz, bunları etkin bırakmanızı
-            öneririz.
+            çerezleri devre dışı bırakmanın web sitemizin işlevselliği üzerinde
+            olumsuz etkileri olabilir. Eğer çerezlerin gerekliliği konusunda
+            emin değilseniz, bunları etkin bırakmanızı öneririz.
           </p>
           <h2 class="policy-terms-text">
             Çerezleri Nasıl Devre Dışı Bırakabilirim?
           </h2>
 
           <p class="policy-terms-text-one">
-            Tarayıcı ayarlarınızı değiştirerek çerezlerin yüklenmesini
-            engelleyebilirsiniz (bunu nasıl yapacağınızı öğrenmek için
-            tarayıcınızın Yardım bölümüne başvurabilirsiniz). Ancak, çerezleri
-            devre dışı bırakmanız, cooladventurequest.com ve ziyaret ettiğiniz
-            diğer web sitelerinin bazı özelliklerini düzgün çalıştırmamasına yol
-            açabilir. Çerezlerin devre dışı bırakılması, genellikle bazı
-            fonksiyonların kaybolmasına neden olacaktır, bu yüzden devre dışı
-            bırakmamanız tavsiye edilir.
+            Tarayıcı ayarlarını değiştirmek suretiyle çerezlerin yüklenmesini
+            engelleyebilirsiniz. Bununla ilgili detaylar için tarayıcınızın
+            "Yardım" bölümüne başvurabilirsiniz. Ancak, çerezleri devre dışı
+            bırakmanız, startpathjoy.com ve diğer ziyaret ettiğiniz web
+            sitelerinin bazı özelliklerinin düzgün çalışmamasına yol açabilir.
+            Çerezlerin devre dışı bırakılması genellikle bazı işlevlerin
+            kaybolmasına neden olur, bu yüzden devre dışı bırakmamanız tavsiye
+            edilir.
           </p>
 
           <h2 class="policy-terms-text">Kullandığımız Çerezler</h2>
@@ -125,49 +124,48 @@
               <span class="policy-terms-text-bold">
                 Site Tercih Çerezleri:</span
               >
-              Sitenin sunduğu en iyi deneyimi sağlamak için kullanıcı
-              tercihlerinizi saklamak amacıyla çerezler kullanıyoruz. Bu
-              çerezler, her ziyarette tercihlerinizi hatırlamamızı sağlar ve
-              sizin için daha kişiselleştirilmiş bir deneyim sunar.
+              Web sitemizde en iyi deneyimi sağlamak için kullanıcı
+              tercihlerinizi hatırlamak amacıyla çerezler kullanıyoruz. Bu
+              çerezler, her ziyaretinizde tercihlerinizi saklayarak
+              kişiselleştirilmiş bir deneyim sunar.
             </li>
           </ul>
 
           <h2 class="policy-terms-text text-bold">Üçüncü Taraf Çerezleri</h2>
 
           <p class="policy-terms-text-one">
-            Bazen güvenilir üçüncü taraflar tarafından sağlanan çerezleri de
-            kullanmaktayız. İşte bunlardan bazıları:
+            Bazı güvenilir üçüncü taraflar tarafından sağlanan çerezleri de
+            kullanıyoruz. İşte bunlar:
           </p>
           <ul class="terms-lists">
             <li>
-              <span class="policy-terms-text-bold"> Google Analytics:</span>
-              Sitemiz, Google Analytics'i kullanarak web sitemizi nasıl
-              kullandığınızı analiz eder. Bu çerezler, web sitemizdeki
-              etkileşimlerinizi takip eder ve bizlere nasıl daha iyi bir deneyim
-              sunabileceğimizi anlamamıza yardımcı olur. Google Analytics
-              çerezleri hakkında daha fazla bilgi edinmek için Google
-              Analytics’in resmi sayfasını ziyaret edebilirsiniz.
+              Google Analytics: Web sitemizin performansını analiz etmek için
+              Google Analytics kullanıyoruz. Bu çerezler, web sitemizde
+              geçirdiğiniz zamanı ve ziyaret ettiğiniz sayfaları izler. Bu
+              bilgiler, içeriklerimizi daha ilgi çekici ve kullanıcı dostu hale
+              getirmemize yardımcı olur. Google Analytics çerezleri hakkında
+              daha fazla bilgi almak için Google Analytics'in resmi sayfasını
+              ziyaret edebilirsiniz.
             </li>
             <li>
-              <span class="policy-terms-text-bold">Google AdSense:</span>
-              Web sitemizde size uygun reklamlar sunmak için Google AdSense
-              kullanıyoruz. Google, DoubleClick çerezlerini kullanarak sizin
-              için daha alakalı reklamları sunar. Google AdSense ve gizliliği
-              hakkında daha fazla bilgi için Google AdSense’in gizlilik
-              politikalarına göz atabilirsiniz.
+              Google AdSense: Reklamları kişiselleştirmek ve daha uygun
+              reklamlar sunmak amacıyla Google AdSense kullanıyoruz. Google,
+              DoubleClick çerezlerini kullanarak size en uygun reklamları
+              gösterir. Google AdSense hakkında daha fazla bilgi edinmek için,
+              Google AdSense'in gizlilik politikasını inceleyebilirsiniz.
             </li>
           </ul>
 
           <h2 class="policy-terms-text text-bold">Ekstra Bilgiler</h2>
           <p class="policy-terms-text-one">
-            Çerezler hakkındaki bu bilgiler, sorularınızı yanıtlamayı umarız.
-            Çerezlerin devre dışı bırakılmasının, bazı site özelliklerinin
-            düzgün çalışmamasına yol açabileceğini unutmayın. Bu yüzden,
+            Umarız bu bilgiler, çerezlerle ilgili sorularınızı yanıtlamanıza
+            yardımcı olur. Çerezlerin devre dışı bırakılması, bazı site
+            özelliklerinin düzgün çalışmamasına yol açabilir. Bu nedenle,
             çerezlerinizi devre dışı bırakmamanız önerilir.
           </p>
 
           <p class="policy-terms-text-one">
-            Çerezlerle ilgili daha fazla bilgi için "Çerez Politikamız"
+            Çerezlerle ilgili daha fazla bilgi almak için "Çerez Politikamız"
             sayfamızı ziyaret edebilirsiniz.
           </p>
 
@@ -175,20 +173,16 @@
             Eğer daha fazla bilgi almak isterseniz, bizimle iletişime geçmek
             için şu yöntemlerden birini kullanabilirsiniz:
           </p>
-          <ul class="terms-lists">
-            <li>
-              E-posta:
-              <a
-                href="mailto:support@cooladventurequest.com
+          <p class="policy-terms-text-one">
+            E-posta:
+            <a
+              href="mailto:support@startpathjoy.com
 "
-                class="email-link"
-              >
-                support@cooladventurequest.com
-              </a>
-            </li>
-          </ul>
-
-          <p class="policy-terms-text-one"></p>
+              class="email-link"
+            >
+              support@startpathjoy.com
+            </a>
+          </p>
         </div>
       </section>
     </main>
@@ -198,12 +192,12 @@
         <div>
           <div class="footer-wrapper">
             <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
-            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
             <a class="footer-text" href="policy.html">Gizlilik Politikası</a>
+            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
           </div>
 
           <p class="footer-copyright">
-            Telif hakları saklıdır cooladventurequest.com 2024
+            Telif hakları saklıdır startpathjoy.com | 2024
           </p>
         </div>
       </div>
