--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mutlu Gelin</title>
-    <link rel="icon" href="image/image.png" />
+    <title>Kırmızı Böcek</title>
+    <link rel="icon" href="" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -81,17 +81,14 @@
     <main class="main">
       <section class="home" id="home">
         <div class="home__wrapper container">
-          <h1 class="home-title">
-            Mutlu Gelin - Hayalinizdeki Gelinlik Sizi Bekliyor!
-          </h1>
-
+          <h1 class="home-title">Kırmızı Böcek -</h1>
+          <p class="home-text-one">Yol Arkadaşınız Sizi Bekliyor!</p>
           <p class="home-text">
-            Hayalinizdeki gelinliği kiralayın. <br />
-            Şıklık, rahatlık ve uygun fiyatla evliliğe adım atın!
+            Cİstediğiniz zaman, istediğiniz yerde, güvenli ve konforlu araçlar
           </p>
-          <button class="home-button">Suknenizi İnceleyin</button>
+          <button class="home-button">Hemen Rezervasyon Yap</button>
           <button class="home-button home-button-two">
-            Suknenizi İnceleyin
+            Araçlarımızı Keşfedin
           </button>
         </div>
       </section>
@@ -351,12 +348,12 @@
         <div>
           <div class="footer-wrapper">
             <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
-            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
             <a class="footer-text" href="policy.html">Gizlilik Politikası</a>
+            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
           </div>
 
           <p class="footer-copyright">
-            Telif hakları saklıdır cooladventurequest.com 2024
+            Telif hakları saklıdır startpathjoy.com | 2024
           </p>
         </div>
       </div>
