--- a/policy.html
+++ b/policy.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mutlu Gelin</title>
-    <link rel="icon" href="image/image.png" />
+    <title>Kırmızı Böcek</title>
+    <link rel="icon" href="" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -87,139 +87,121 @@
           <p class="policy-terms-text">Gizlilik Politikası</p>
 
           <p class="policy-terms-text-one">
-            cooladventurequest.com, kullanıcılarının gizliliğini ön planda
-            tutmaktadır. Bu Gizlilik Politikası, sitemizde toplanan verilerin
-            nasıl kullanıldığını ve korunacağını açıklamaktadır. Gizliliğinizle
-            ilgili herhangi bir sorunuz varsa ya da ek bilgiye ihtiyaç
-            duyuyorsanız, lütfen bizimle iletişime geçin.
-          </p>
-
-          <h2 class="policy-terms-text-one">Veri Koruma Yönetmeliği (GDPR)</h2>
-          <p class="policy-terms-text-one">
-            cooladventurequest.com, kişisel verilerinizin sorumlusudur.
-          </p>
-          <p class="policy-terms-text-one">
-            Verilerinizi toplama ve işleme süreci, aşağıdaki yasal temellere
-            dayanır:
-          </p>
-          <ul class="terms-lists">
-            <li>
-              Sözleşme gerekliliği: Verilerinizi, sizinle bir sözleşme yapmak
-              amacıyla toplarız.
-            </li>
-            <li>
-              Onay: Kişisel verilerinizi sağlamaya dair verdiğiniz açık rıza.
-            </li>
-            <li>
-              Meşru çıkarlar: Verilerinizi işlemek, bizim meşru çıkarlarımızı
-              korumak için gereklidir.
-            </li>
-            <li>
-              Yasal yükümlülükler: Verilerinizi yasal yükümlülüklerimizi yerine
-              getirmek için işleriz.
-            </li>
-          </ul>
-
-          <p class="policy-terms-text-one">
-            Verilerinizi yalnızca bu Gizlilik Politikası’nda belirtilen
-            amaçlarla kullanacağız ve yalnızca gerekli olduğunda saklayacağız.
-          </p>
-          <p class="policy-terms-text-one">
-            Eğer Avrupa Ekonomik Alanı (EEA) sakinlerinden biriyseniz, veri
-            koruma haklarına sahipsiniz. Kişisel verilerinize erişim talep
-            edebilir, bu verileri güncelleyebilir ya da silebilirsiniz. Bizimle
-            iletişime geçerek bu hakları kullanabilirsiniz.
-          </p>
-          <p class="policy-terms-text-one">Veri Koruma Haklarınız:</p>
-          <ul class="terms-lists">
-            <li>Verilerinize erişim, güncelleme ve silme hakkı</li>
-            <li>Verilerin düzeltilmesi hakkı</li>
-            <li>Verilerin işlenmesine itiraz etme hakkı</li>
-            <li>İşlemenin kısıtlanması hakkı</li>
-            <li>Verilerin başka sistemlere aktarılması hakkı</li>
-            <li>Onayın geri alınması hakkı</li>
-          </ul>
-
-          <h2 class="policy-terms-text-one">Sunucu Günlükleri</h2>
-          <p class="policy-terms-text-one">
-            cooladventurequest.com, kullanıcıların siteyi ziyaret ederken IP
-            adresi, tarayıcı türü, internet servis sağlayıcısı (ISP), tarih ve
-            saat damgaları, yönlendiren/çıkış sayfaları gibi bilgileri içeren
-            sunucu günlükleri tutar. Bu bilgiler kişisel olarak tanımlanabilir
-            verilerle ilişkilendirilmez ve sadece site trafiğini izlemek, analiz
-            yapmak ve demografik verileri toplamak için kullanılır.
-          </p>
-
-          <h2 class="policy-terms-text-one">Çerezler ve Web Beacons</h2>
-          <p class="policy-terms-text-one">
-            cooladventurequest.com, kullanıcı deneyimini iyileştirmek için
-            çerezler kullanır. Çerezler, kullanıcının siteyi nasıl kullandığını
-            izlememize ve içeriği kişiselleştirmemize yardımcı olur. Bu sayede,
-            site içeriği kullanıcıların tercihleri doğrultusunda optimize
-            edilir.
-          </p>
-
-          <h2 class="policy-terms-text-one">Google DoubleClick DART Çerezi</h2>
-          <p class="policy-terms-text-one">
-            Google, sitemizdeki üçüncü taraf reklam sağlayıcısıdır ve Google,
-            kullanıcılara önceki ziyaretlerine dayanarak reklam göstermek için
-            DART çerezi kullanır. DART çerezini devre dışı bırakmak için,
-            kullanıcılar Google'ın Gizlilik Politikası sayfasını ziyaret
-            edebilirler.
-          </p>
-
-          <h2 class="policy-terms-text-one">Reklam Ortaklarımız</h2>
-          <p class="policy-terms-text-one">
-            Bazı reklam verenlerimiz, çerezler ve web beacons kullanabilir. Her
-            bir reklam ortağımızın kendi Gizlilik Politikası bulunmaktadır.
-            Kişisel verilerinizin nasıl yönetildiği hakkında daha fazla bilgi
-            almak için, bu politikaları incelemenizi öneririz:
-          </p>
-          <ul class="terms-lists">
-            <li>
-              Google:
-              <a
-                class="policy-terms-text-one email-link"
-                href=" https://policies.google.com/technologies/ads
-"
-              >
-                https://policies.google.com/ technologies/ads
-              </a>
-            </li>
-          </ul>
-          <h2 class="policy-terms-text-one">
-            Üçüncü Taraf Gizlilik Politikaları
-          </h2>
-          <p class="policy-terms-text-one">
-            Bu Gizlilik Politikası yalnızca cooladventurequest.com için
-            geçerlidir. Diğer web sitelerinin veya üçüncü taraf reklamcılarının
-            veri toplama yöntemleri hakkında bilgi almak için, kendi gizlilik
-            politikalarını incelemenizi tavsiye ederiz. Çerezlerinizi tarayıcı
-            ayarlarınızla devre dışı bırakabilirsiniz. Çerez yönetimi hakkında
-            daha fazla bilgi için, kullandığınız tarayıcı sağlayıcısının web
-            sitesini ziyaret edin.
-          </p>
-          <h2 class="policy-terms-text-one">Çocukların Bilgileri</h2>
-          <p class="policy-terms-text-one">
-            Çevrimiçi gizlilik, en büyük önceliklerimizden biridir. 13 yaşın
-            altındaki çocuklardan kişisel veri toplamadığımızı belirtmek
-            isteriz. Eğer çocuğunuzun sitemizde kişisel veri sağladığını
-            düşünüyorsanız, lütfen bizimle iletişime geçin, bu verileri
-            kaydımızdan silmek için gerekli adımları atacağız.
+            startpathjoy.com olarak, kullanıcılarımızın gizliliğine büyük önem
+            veriyoruz. Bu Gizlilik Politikası, web sitemiz üzerinden
+            topladığımız kişisel bilgilerin nasıl kullanıldığı, korunduğu ve
+            paylaşıldığı hakkında bilgi verir. Sitemizi kullanarak, bu
+            politikaya ve kişisel verilerinizi toplama ve işleme yöntemlerimize
+            onay verdiğinizi kabul etmiş olursunuz.
           </p>
 
           <h2 class="policy-terms-text-one">
-            Yalnızca Çevrimiçi Gizlilik Politikası
+            Kişisel Verilerin Toplanması ve Kullanılması
           </h2>
           <p class="policy-terms-text-one">
-            Bu Gizlilik Politikası, yalnızca cooladventurequest.com üzerinden
-            topladığımız çevrimiçi verilere ilişkindir ve çevrimdışı veya başka
-            yollarla toplanan veriler için geçerli değildir.
+            startpathjoy.com, çeşitli amaçlarla kişisel verilerinizi
+            toplayabilir ve kullanabilir. Bu veriler, kullanıcı deneyimini
+            kişiselleştirmek, hizmetlerimizi geliştirmek ve size daha iyi hizmet
+            sunmak amacıyla kullanılır. Kişisel verileriniz yalnızca bu Gizlilik
+            Politikasında belirtilen amaçlarla işlenecektir.
+          </p>
+          <p class="policy-terms-text-one">
+            Topladığımız kişisel veriler şunları içerebilir:
+          </p>
+          <ul class="terms-lists">
+            <li>İsim, e-posta adresi, telefon numarası</li>
+            <li>Tarayıcı bilgileri, IP adresi, kullanıcı etkinlikleri</li>
+            <li>
+              Çerezler ve diğer izleme teknolojileri ile toplanan bilgiler
+            </li>
+          </ul>
+
+          <p class="policy-terms-text-one">
+            Bu verileri, kullanıcı deneyimini iyileştirmek, hizmetlerimizi
+            tanıtmak ve pazarlama faaliyetlerinde bulunmak amacıyla
+            kullanabiliriz. Ayrıca, bazı durumlarda üçüncü taraflarla
+            paylaşabiliriz.
+          </p>
+          <p class="policy-terms-text-one">Çerezler ve Web Beacons</p>
+          <p class="policy-terms-text-one">
+            Web sitemiz, kullanıcı deneyimini geliştirmek amacıyla çerezler
+            kullanmaktadır. Çerezler, bir web sitesine ilk kez giriş
+            yaptığınızda tarayıcınızda depolanan küçük veri dosyalarıdır. Bu
+            dosyalar, siteyi tekrar ziyaret ettiğinizde tanınmanızı sağlar ve
+            kullanıcı deneyimini kişiselleştirebilir.
+          </p>
+          <p class="policy-terms-text-one">
+            Çerezler, şunları yapmamıza yardımcı olabilir:
+          </p>
+          <ul class="terms-lists">
+            <li>Sitemizi nasıl kullandığınızı izlemek</li>
+            <li>Kişisel tercihlerinizi saklamak</li>
+            <li>Reklamlarımızı ve içeriklerimizi optimize etmek</li>
+          </ul>
+
+          <h2 class="policy-terms-text-one">
+            Çerezleri yönetmek veya devre dışı bırakmak için tarayıcı
+            ayarlarınızı değiştirebilirsiniz.
+          </h2>
+          <p class="policy-terms-text-one">
+            Üçüncü Taraf Bağlantıları ve Reklamlar
+          </p>
+
+          <h2 class="policy-terms-text-one">
+            Web sitemiz, üçüncü taraf web sitelerine ve reklam verenlere
+            bağlantılar içerebilir. Bu üçüncü tarafların gizlilik uygulamaları
+            bizim sorumluluğumuzda değildir ve kendi gizlilik politikalarına
+            sahip olabilirler. Bu bağlantılara tıklayarak, onların gizlilik
+            politikalarına tabi olacağınızı unutmayın.
+          </h2>
+          <p class="policy-terms-text-one">Kişisel Verilerin Paylaşılması</p>
+
+          <h2 class="policy-terms-text-one">
+            startpathjoy.com, kişisel verilerinizi yalnızca yasal
+            yükümlülüklerimizi yerine getirmek, hizmetlerimizi sunmak veya
+            anlaşmalı üçüncü taraf hizmet sağlayıcılarıyla paylaşmak durumunda
+            kalabilir. Bu üçüncü taraflar, yalnızca belirli hizmetleri
+            sunabilmek için verilere erişebilirler ve bilgilerinizi başka
+            amaçlarla kullanamazlar.
+          </h2>
+
+          <h2 class="policy-terms-text-one">Veri Güvenliği</h2>
+          <p class="policy-terms-text-one">
+            Kişisel verilerinizin güvenliği bizim için çok önemlidir.
+            Verilerinizi korumak için uygun güvenlik önlemleri alıyoruz. Ancak,
+            internet üzerinden yapılan veri iletimlerinde hiçbir güvenlik önlemi
+            yüzde yüz güvenli değildir. Bu nedenle, internet üzerinden
+            gönderdiğiniz bilgilerin güvenliği konusunda garanti veremeyiz.
+          </p>
+
+          <h2 class="policy-terms-text-one">Çocukların Gizliliği</h2>
+          <p class="policy-terms-text-one">
+            startpathjoy.com, 13 yaşın altındaki çocuklardan bilerek kişisel
+            veri toplamaz. Eğer bir çocuğun bizimle kişisel veri paylaştığını
+            düşünüyorsanız, lütfen bizimle iletişime geçin. Bu tür verileri
+            derhal sileceğiz.
+          </p>
+          <h2 class="policy-terms-text-one">
+            Gizlilik Politikası Değişiklikleri
+          </h2>
+          <p class="policy-terms-text-one">
+            Zaman zaman, bu Gizlilik Politikasını güncelleyebiliriz. Bu
+            değişiklikleri, güncellenmiş politikayı web sitemizde yayımlayarak
+            bildireceğiz. Politikanın son güncellenme tarihi sayfanın altında
+            belirtilecektir.
+          </p>
+
+          <h2 class="policy-terms-text-one">İletişim</h2>
+          <p class="policy-terms-text-one">
+            Gizlilik politikamızla ilgili herhangi bir sorunuz veya endişeniz
+            varsa, bizimle iletişime geçebilirsiniz.
           </p>
           <h2 class="policy-terms-text-one">Onay</h2>
           <p class="policy-terms-text-one">
-            Web sitemizi kullanarak, Gizlilik Politikamıza onay verdiğinizi ve
-            şartlarını kabul ettiğinizi beyan etmiş oluyorsunuz.
+            Web sitemizi kullanarak, startpathjoy.com’un Gizlilik Politikasına
+            onay verdiğinizi ve kişisel verilerinizi bu politika çerçevesinde
+            toplama, işleme ve saklama şartlarını kabul ettiğinizi beyan etmiş
+            olursunuz.
           </p>
         </div>
       </section>
@@ -230,12 +212,12 @@
         <div>
           <div class="footer-wrapper">
             <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
-            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
             <a class="footer-text" href="policy.html">Gizlilik Politikası</a>
+            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
           </div>
 
           <p class="footer-copyright">
-            Telif hakları saklıdır cooladventurequest.com 2024
+            Telif hakları saklıdır startpathjoy.com | 2024
           </p>
         </div>
       </div>
