--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mutlu Gelin</title>
-    <link rel="icon" href="image/image.png" />
+    <title>Kırmızı Böcek</title>
+    <link rel="icon" href="" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -84,21 +84,20 @@
     <main class="policy">
       <section>
         <div class="policy-terms-container">
-          <h2 class="policy-terms-text">Kullanım Şartları</h2>
+          <h2 class="policy-terms-text-one">Kullanım Şartları</h2>
           <p class="policy-terms-text-one">
-            cooladventurequest.com internet sitesine erişerek, bu Kullanım
+            startpathjoy.com internet sitesine erişim sağlamak, bu Kullanım
             Şartları'na ve geçerli yerel yasa ve yönetmeliklere uymayı kabul
-            ediyorsunuz. Bu şartlardan herhangi biriyle anlaşmazlık durumunda,
-            siteye erişim sağlamak yasaktır. Sitedeki içerikler telif hakları ve
-            ticari markalarla korunmaktadır.
+            ettiğiniz anlamına gelir. Eğer bu şartlarla ilgili herhangi bir
+            itirazınız varsa, siteye erişim sağlamamanız gerekir. Sitedeki tüm
+            içerikler telif hakları ve ticari markalarla korunmaktadır.
           </p>
           <h2 class="policy-terms-text-one">1. Kullanım Lisansı</h2>
           <p class="policy-terms-text-one">
-            Mutlu Gelin, cooladventurequest.com sitesindeki materyalleri
-            yalnızca kişisel ve ticari olmayan amaçlarla geçici olarak
-            indirmenize izin verir. Bu, bir lisans verilmesi olup, mülkiyetin
-            devri anlamına gelmez. Bu lisans çerçevesinde aşağıdaki eylemleri
-            gerçekleştiremezsiniz:
+            Kırmızı Böcek, startpathjoy.com sitesinde bulunan materyalleri
+            sadece kişisel ve ticari olmayan amaçlarla geçici olarak indirmeniz
+            için size lisans verir. Bu, bir lisans verilmesi olup, mülkiyetin
+            devri anlamına gelmez. Bu lisansla şu işlemleri yapamazsınız:
           </p>
           <ul class="terms-lists">
             <li>Materyalleri değiştirmek veya kopyalamak;</li>
@@ -118,57 +117,56 @@
             </li>
           </ul>
           <p class="policy-terms-text-one">
-            Bu lisans, belirtilen kurallara aykırı hareket etmeniz durumunda
-            otomatik olarak iptal edilir. Lisans sona erdiğinde veya içerikleri
-            görüntüledikten sonra, indirilen materyalleri elektronik veya basılı
-            olarak imha etmeniz gerekmektedir.
+            Bu lisans, yukarıda belirtilen kurallara aykırı hareket etmeniz
+            durumunda otomatik olarak iptal edilir. Lisans sona erdiğinde veya
+            içerikleri görüntüledikten sonra, indirilen materyalleri elektronik
+            veya basılı olarak imha etmeniz gerekmektedir.
           </p>
           <h2 class="policy-terms-text-one">2. Sorumluluk Reddi</h2>
           <p class="policy-terms-text-one">
-            Mutlu Gelin sitesi üzerinden sunulan içerikler, "olduğu gibi"
-            sağlanmaktadır. Mutlu Gelin, açık ya da zımni herhangi bir garanti
-            vermez ve belirli bir amaca uygunluk, yasal uyumluluk veya fikri
-            mülkiyet haklarının ihlali gibi diğer garantilerden feragat eder.
-            Ayrıca, Mutlu Gelin siteye veya site üzerinden bağlantı verilen
-            başka sayfalara dair materyallerin doğruluğu veya güvenilirliği
-            hakkında herhangi bir garanti sunmaz.
+            Kırmızı Böcek, startpathjoy.com sitesindeki materyalleri "olduğu
+            gibi" sunar. Şirket, açık ya da zımni herhangi bir garanti vermez ve
+            belirli bir amaca uygunluk, yasal uyumluluk veya fikri mülkiyet
+            haklarının ihlali gibi diğer garantilerden feragat eder. Ayrıca,
+            Kırmızı Böcek, siteye veya siteye bağlantılı olan başka sayfalarda
+            bulunan materyallerin doğruluğu veya güvenilirliği hakkında herhangi
+            bir garanti sunmaz.
           </p>
           <h2 class="policy-terms-text-one">3. Sınırlı Sorumluluk</h2>
           <p class="policy-terms-text-one">
-            Mutlu Gelin ve tedarikçileri, cooladventurequest.com üzerinden
-            erişilen materyalleri kullanma ya da kullanamama durumundan doğacak
-            herhangi bir zarardan sorumlu tutulamaz. Bu, Mutlu Gelin'e zarar
-            riski bildirildiği halde geçerlidir. Bazı yargı bölgelerinde zımni
-            garanti sınırlamaları veya dolaylı zararlar için sorumluluk kabul
-            edilmez, bu nedenle bu sınırlamalar bazı durumlarda geçerli
-            olmayabilir.
+            Kırmızı Böcek ve tedarikçileri, startpathjoy.com sitesindeki
+            materyalleri kullanma veya kullanamama durumundan doğacak herhangi
+            bir zarardan sorumlu tutulamaz. Bu, Kırmızı Böcek'e zarar riski
+            bildirildiği halde geçerlidir. Bazı yargı bölgelerinde zımni garanti
+            sınırlamaları veya dolaylı zararlar için sorumluluk kabul edilmez,
+            bu nedenle bu sınırlamalar bazı durumlarda geçerli olmayabilir.
           </p>
           <h2 class="policy-terms-text-one">4. Hatalar ve Düzenlemeler</h2>
 
           <p class="policy-terms-text-one">
-            Mutlu Gelin sitesindeki materyallerde teknik, tipografik veya
-            fotoğrafik hatalar olabilir. Mutlu Gelin, materyallerin doğru,
-            eksiksiz veya güncel olduğunu garanti etmez. Şirket, içeriklerin
-            değiştirilmesi için herhangi bir bildirimde bulunmadan değişiklik
-            yapma hakkına sahiptir. Ancak, Mutlu Gelin materyalleri güncelleme
-            yükümlülüğüne sahip değildir.
+            Kırmızı Böcek, startpathjoy.com sitesindeki materyallerde teknik,
+            tipografik veya fotoğrafik hatalar olabilir. Kırmızı Böcek,
+            materyallerin doğru, eksiksiz veya güncel olduğunu garanti etmez.
+            Şirket, içeriklerin değiştirilmesi için herhangi bir bildirimde
+            bulunmadan değişiklik yapma hakkına sahiptir. Ancak, Kırmızı Böcek
+            materyalleri güncelleme yükümlülüğüne sahip değildir.
           </p>
           <h2 class="policy-terms-text-one">5. Bağlantılars</h2>
 
           <p class="policy-terms-text-one">
-            Mutlu Gelin, cooladventurequest.com sitesine bağlı tüm dış
-            bağlantıları kontrol etmez ve bu bağlantılı sitelerin içeriklerinden
-            sorumlu tutulamaz. Bir bağlantı, bağlandığı siteyi onaylama anlamına
-            gelmez. Bağlantılı siteleri kullanmak tamamen kendi riskinizdedir.
+            Kırmızı Böcek, startpathjoy.com sitesine bağlı olan dış bağlantıları
+            kontrol etmez ve bu bağlantılı sitelerin içeriklerinden sorumlu
+            tutulamaz. Bir bağlantı, bağlandığı siteyi onaylama anlamına gelmez.
+            Bağlantılı siteleri kullanmak tamamen kendi riskinizdedir.
           </p>
           <h2 class="policy-terms-text-one">
             6. Kullanım Şartlarında Değişiklikler
           </h2>
           <p class="policy-terms-text-one">
-            Mutlu Gelin, bu Kullanım Şartları'nı herhangi bir bildirimde
-            bulunmaksızın zaman zaman güncelleyebilir. cooladventurequest.com
-            internet sitesini kullanarak, güncel kullanım şartlarına bağlı
-            kalmayı kabul etmiş olursunuz.
+            Kırmızı Böcek, bu Kullanım Şartları'nı herhangi bir bildirimde
+            bulunmaksızın zaman zaman güncelleyebilir. startpathjoy.com sitesini
+            kullanarak, güncel kullanım şartlarına bağlı kalmayı kabul etmiş
+            olursunuz.
           </p>
           <h2 class="policy-terms-text-one">7. Gizlilik Politikası</h2>
 
@@ -178,25 +176,24 @@
           </p>
           <h2 class="policy-terms-text-one">8. Geçerli Hukuk</h2>
           <p class="policy-terms-text-one">
-            Mutlu Gelin ile ilgili tüm anlaşmazlıklar, yerel yasalara tabi
+            Kırmızı Böcek ile ilgili tüm anlaşmazlıklar, yerel yasalara tabi
             olacak ve herhangi bir hukuk çatışması durumunda, geçerli yasal
             düzenlemelere göre çözüme kavuşturulacaktır.
           </p>
         </div>
       </section>
     </main>
-
     <footer class="footer">
       <div class="footer-container">
         <div>
           <div class="footer-wrapper">
             <a class="footer-text" href="terms.html">Şartlar ve Koşullar</a>
-            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
             <a class="footer-text" href="policy.html">Gizlilik Politikası</a>
+            <a class="footer-text" href="cookie.html">Çerez Politikası </a>
           </div>
 
           <p class="footer-copyright">
-            Telif hakları saklıdır cooladventurequest.com 2024
+            Telif hakları saklıdır startpathjoy.com | 2024
           </p>
         </div>
       </div>
